<resources>
    <string name="app_name">NEU SportsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_mens_sports">Men\'s Sports</string>
    <string name="menu_womens_sports">Women\'s Sports</string>
    <string name="menu_baseball">Baseball</string>
    <string name="menu_basketball">Basketball</string>
    <string name="menu_crossCountry">Cross Country</string>
    <string name="menu_iceHockey">Ice Hockey</string>
    <string name="menu_Rowing">Rowing</string>
    <string name="menu_track">Track &amp; Field</string>
    <string name="menu_fieldHockey">Field Hockey</string>
    <string name="menu_swimming">Swimming &amp; Diving</string>
    <string name="menu_volleyball">Volleyball</string>
    <string name="menu_soccer">Soccer</string>
    <string name="menu_rowing">Rowing</string>

    <string name="item_Sports">Sport</string>
</resources>
